Changed how "texts" are added